--- a/LLM-Zoomcamp-2025-M1-Soln/homework_solution.ipynb
+++ b/LLM-Zoomcamp-2025-M1-Soln/homework_solution.ipynb
@@ -218,7 +218,7 @@
    "id": "8b39fdd6",
    "metadata": {},
    "source": [
-    "## Elasticsearch, Not Need (Docker)\n",
+    "## Elasticsearch, Inside Codespaces to Docker\n",
     "\n",
     "- https://hub.docker.com/_/elasticsearch/tags\n",
     "\n",
@@ -235,6 +235,7 @@
     "\n",
     "docker run -d --name es-dev \\\n",
     "  -p 9200:9200 \\\n",
+    "  -p 9300:9300 \\\n",
     "  -e \"discovery.type=single-node\" \\\n",
     "  -e \"xpack.security.enabled=false\" \\\n",
     "  docker.elastic.co/elasticsearch/elasticsearch:9.0.2\n",
